--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <p>I am Here!</p>
-    <p>Marvel is awesome and is way better than DC</p>
+    <p>I am Here!
+    Marvel is awesome and is way better than DC</p>
   </body>
 </html>
