--- a/index1.html
+++ b/index1.html
@@ -24,13 +24,14 @@
 
 <ul>
   <ol>
-    <p>Item: the richest man in the world made his fortune from-what? Railways? Shipping? Oil? No, operating systems.
+    <p>
+      <strong>Item:</strong> the richest man in the world made his fortune from-what? Railways? Shipping? Oil? No, operating systems.
     </p>
     <p>
-Item: the Department of Justice is tackling Microsoft's supposed OS monopoly with legal tools that were invented to restrain the power of Nineteenth-Century robber barons.
+      <strong>Item:</strong> the Department of Justice is tackling Microsoft's supposed OS monopoly with legal tools that were invented to restrain the power of Nineteenth-Century robber barons.
     </p>
     <p>
-Item: a woman friend of mine recently told me that she'd broken off a (hitherto) stimulating exchange of e-mail with a young man. At first he had seemed like such an intelligent and interesting guy, she said, but then "he started going all PC-versus-Mac on me."
+      <strong>Item:</strong> a woman friend of mine recently told me that she'd broken off a (hitherto) stimulating exchange of e-mail with a young man. At first he had seemed like such an intelligent and interesting guy, she said, but then "he started going all PC-versus-Mac on me."
     </p>
   </ol>
  </ul>
@@ -106,22 +107,44 @@ What the hell is going on here? And does the operating system business have a fu
   The Batmobile outlet sells a few vehicles to the occasional car nut who wants a second vehicle to go with his station wagon, but seems to accept, at least for now, that it's a fringe player.
   </p>
 
-The group giving away the free tanks only stays alive because it is staffed by volunteers, who are lined up at the edge of the street with bullhorns, trying to draw customers' attention to this incredible situation. A typical conversation goes something like this:
+  <p>
+  The group giving away the free tanks only stays alive because it is staffed by volunteers, who are lined up at the edge of the street with bullhorns, trying to draw customers' attention to this incredible situation. A typical conversation goes something like this:
+  </p>
 
-Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invulnerable, and can drive across rocks and swamps at ninety miles an hour while getting a hundred miles to the gallon!"
+  <p>
+  Hacker with bullhorn: "Save your money! Accept one of our free tanks! It is invulnerable, and can drive across rocks and swamps at ninety miles an hour while getting a hundred miles to the gallon!"
+  </p>
 
-Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"
+  <p>
+  Prospective station wagon buyer: "I know what you say is true...but...er...I don't know how to maintain a tank!"
+  </p>
 
-Bullhorn: "You don't know how to maintain a station wagon either!"
+  <p>
+  Bullhorn: "You don't know how to maintain a station wagon either!"
+  </p>
 
-Buyer: "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."
+  <p>
+  Buyer: "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."
+  </p>
 
-Bullhorn: "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"
+  <p>
+  Bullhorn: "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"
+  </p>
 
-Buyer: "Stay away from my house, you freak!"
+  <p>
+  Buyer: "Stay away from my house, you freak!"
+  </p>
 
-Bullhorn: "But..."
+  <p>
+  Bullhorn: "But..."
+  </p>
 
-Buyer: "Can't you see that everyone is buying station wagons?"
+  <p>
+  Buyer: "Can't you see that everyone is buying station wagons?"
+  </p>
 
-Copyright © 1999 by Neal Stephenson
+  <p>
+  Copyright © 1999 by Neal Stephenson
+  </p>
+ </body>
+</html>
