--- a/index1.html
+++ b/index1.html
@@ -120,27 +120,27 @@ What the hell is going on here? And does the operating system business have a fu
   </p>
 
   <p>
-  Bullhorn: "You don't know how to maintain a station wagon either!"
+  <i>Bullhorn:</i> "You don't know how to maintain a station wagon either!"
   </p>
 
   <p>
-  Buyer: "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."
+    <i>Buyer:</i> "But this dealership has mechanics on staff. If something goes wrong with my station wagon, I can take a day off work, bring it here, and pay them to work on it while I sit in the waiting room for hours, listening to elevator music."
   </p>
 
   <p>
-  Bullhorn: "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"
+    <i>Bullhorn:</i> "But if you accept one of our free tanks we will send volunteers to your house to fix it for free while you sleep!"
   </p>
 
   <p>
-  Buyer: "Stay away from my house, you freak!"
+    <i>Buyer:</i> "Stay away from my house, you freak!"
   </p>
 
   <p>
-  Bullhorn: "But..."
+    <i>Bullhorn:</i> "But..."
   </p>
 
   <p>
-  Buyer: "Can't you see that everyone is buying station wagons?"
+    <i>Buyer:</i> "Can't you see that everyone is buying station wagons?"
   </p>
 
   <p>
