--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
     <p>
       <center>
         <strong>
-          <h1>In the Beginning was the Command Line
+          <h1>In the Beginning... was the Command Line
           </h1> 
           <h3>By Neal Stephenson</h3>
          </strong>
