--- a/Week02/coding101.html
+++ b/Week02/coding101.html
@@ -11,6 +11,8 @@
   <p>5000 years ago...</p>
   <p style="color: blue;">A simple paragraph of text.</p>
   
+  <a href="https://codepen.io/huntnoster/pen/MWOYmeM?editors=1000">I have a working copy of the codpen page.</a>
+  
   <h1>My website is all about food</h1>
 
 <p>I <strong>love</strong> food. It is what I look forward to <em>every</em> morning, lunchtime and evening. My favourite foods are as follows:</p>
