--- a/Week02/coding101.html
+++ b/Week02/coding101.html
@@ -11,7 +11,7 @@
   <p>5000 years ago...</p>
   <p style="color: blue;">A simple paragraph of text.</p>
   
-  <a href="https://codepen.io/huntnoster/pen/MWOYmeM?editors=1000">I have a working copy of the codpen page.</a>
+  <p><a href="https://codepen.io/huntnoster/pen/MWOYmeM?editors=1000">I have a working copy of the codpen page.</a></p>
   
   <h1>My website is all about food</h1>
 
