--- a/Week02/index.html
+++ b/Week02/index.html
@@ -1,2 +1,2 @@
-<img src="https://itse1411.github.io/week02/kitten.jpg"
+<img src="https://cdn.mos.cms.futurecdn.net/p5quSf4dZXctG9WFepXFdR.jpg"
      alt="Description of the image">
