--- a/Week02/index.html
+++ b/Week02/index.html
@@ -1,2 +1,2 @@
-<img src="https://cdn.mos.cms.futurecdn.net/p5quSf4dZXctG9WFepXFdR.jpg"
-     alt="Description of the image">
+<img src="https://cdn.mos.cms.futurecdn.net/p5quSf4dZXctG9WFepXFdR.jpg" alt="Description of the image"
+    width="600" height="700">
