--- a/Week02/index.html
+++ b/Week02/index.html
@@ -1,2 +1,14 @@
-<img src="https://cdn.mos.cms.futurecdn.net/p5quSf4dZXctG9WFepXFdR.jpg" alt="Description of the image"
-    width="600" height="700">
+<!DOCTYPE HTML>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>Week 2: excercise</title>
+  <link rel="stylesheet" type="text/css" href="style.css"> 
+</head>
+<body>
+  <h1>This is my web page.</h1>
+  <img src="https://cdn.mos.cms.futurecdn.net/p5quSf4dZXctG9WFepXFdR.jpg" alt="Description of the image"
+  width="600" height="700">
+  <p><a href="huntnoster.github.io/hunt.github.io/week02/index.html">This is the link</a>
+</body>
+</html>
