--- a/Week02/index.html
+++ b/Week02/index.html
@@ -9,6 +9,6 @@
   <h1>This is my web page.</h1>
   <img src="https://cdn.mos.cms.futurecdn.net/p5quSf4dZXctG9WFepXFdR.jpg" alt="Description of the image"
   width="600" height="700">
-  <p><a href="huntnoster.github.io/hunt.github.io/week02/index.html">This is the link</a>
+  <p><a href="huntnoster.github.io/hunt.github.io/week02/index.html">This is the link</a></p>
 </body>
 </html>
