--- a/Week02/index.html
+++ b/Week02/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
   <h1>This is my web page.</h1>
-  <img src="https://cdn.mos.cms.futurecdn.net/p5quSf4dZXctG9WFepXFdR.jpg" alt="Description of the image"
-  width="600" height="700">
+  <img src="https://hunt011.github.io/hunt.github.io/Week02/cat.jpg" alt="cut cat" width="600">
   <p><a href="huntnoster.github.io/hunt.github.io/week02/index.html">This is the link</a></p>
 </body>
 </html>
