--- a/Week02/coding101.html
+++ b/Week02/coding101.html
@@ -49,6 +49,8 @@
   <li>Roll out to about 5mm. Cut into shapes.</li>
   <li>Bake for 25 minutes or until golden brown.</li>
 </ol>
+
+  <p><a href="https://hunt011.github.io/hunt.github.io/Week02/index.html">See my cat</a></p>
   
   <footer style="text-align: center;">
     <p>Copyright 2000 Hunter</p></footer>
