--- a/Week02/index.html
+++ b/Week02/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>This is my web page.</h1>
   <img src="https://hunt011.github.io/hunt.github.io/Week02/cat.jpg" alt="cut cat" width="600">
-  <p><a href="huntnoster.github.io/hunt.github.io/week02/index.html">This is the link</a></p>
+  <p><a href="https://hunt011.github.io/hunt.github.io/Week02/coding101.html">This is the link</a></p>
 </body>
 </html>
