--- a/Fun/valantines.html
+++ b/Fun/valantines.html
@@ -10,6 +10,15 @@
     </header>
     <section id="cont">
     <nav>
+      <h6>
+      <p>You brought me sunshine</p> 
+      <p>when I only saw rain,</p>
+      <p>You brought me laughter</p> 
+      <p>when i only felt pain</p>
+      </h6>
+    </nav>
+    <nav>
+      <article id="content">
       <h3>
       <p>I will Love you</p>
       <p>as long as the sun</p>
@@ -22,11 +31,12 @@
       <p>calm and run dry.</p>
       <p>I will love you untill the end of time.</p>
       </h3>
-    </nav>
-    <article id="content">
-    <p>You brought me sunshine when I only saw rain,</p>
-    <p>You brought me laughter when i only felt pain</p>
+      <ul>
+        <li>You are the best</li>
+        <li>You rule</li>
+        <li>You rock</li>
     </article>
+    </nav>
     </section>
     <footer>
       <ul>
