--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -6,7 +6,11 @@
   </head>
   <body>
     <nav>
-      <h4>Author: Cookie and Kate</h4>
+     <ul>
+       <li><span>Author: Cookie and Kate</span></li>
+       <li>hello</li>
+       <li>aaa</li>
+       <li>dd</li>  
     </nav>
     <header>
       <h2>Recipe</h2>
@@ -14,7 +18,9 @@
     <section>
       <article id="container">
         <p>
+         <h5>
           This is a simple Tortilla Pizza recipe that was originally posted to cookieandkate.com.
+         </h5>
         </p>
       <aside> 
         <p>
@@ -66,17 +72,18 @@
       <p>
         Topping ideas:
       </p>
-      <p>
+      <ul>
+        <li>
         As shown: barbecue sauce (trust me), fresh mozzarella and sharp cheddar cheese, chopped red onion, sliced fresh jalapeño, fresh or defrosted frozen pineapple (canned pineapple is not as good).
-      </p>
-      <p>Basil pesto, feta, fresh or roasted bell peppers (jarred is fine), sliced kalamata olives, chopped red onion, sliced cherry tomatoes.
-      </p>
-      <p>
+        </li>
+        <li>Basil pesto, feta, fresh or roasted bell peppers (jarred is fine), sliced kalamata olives, chopped red onion, sliced cherry tomatoes.
+        </li>
+        <li>
         Arugula pesto, basil pesto or light marinara sauce, mozzarella (optional), fresh arugula and parmesan shavings added after baking (like this).
-      </p>
-      <p>
+        </li>
+        <li>
         Red pepper pesto and goat cheese.
-      </p>
+        </li>
       <p>
         Anything you want!
       </p>
