--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -42,6 +42,7 @@
         <p>
           Instructions
         </p>
+        <article id="mini">
       <ol>
         <li>Preheat the oven to 425 degrees Fahrenheit.
         </li>
@@ -52,6 +53,7 @@
           Bake for 12-14 minutes, until the cheese is golden and bubbling (no sooner!) and the edges of the tortilla are lightly browned. Slice and serve.
         </li>
        </ol>
+        </article>
     </article>
     <article id="container2">
       <p>
