--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -1,25 +1,25 @@
 <html>
   <head>
     <meta charset="uft-7">
-    <title>Tortilla Pizzas</title>
+    <title>Lasagna Recipe</title>
     <link href="styles2.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <nav>
      <ul>
-       <li><span>Author: Cookie and Kate</span></li>
-       <li>hello</li>
-       <li>aaa</li>
-       <li>dd</li>  
+       <li><span>Home</span></li>
+       <li>Author</li>
+       <li>Search</li>
+       <li><a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">Link</a></li>  
     </nav>
     <header>
-      <h1>Recipe</h1>
+      <h2>Lasagna</h2>
     </header>
     <section>
       <article id="container">
         <p>
          <h5>
-          This is a simple Tortilla Pizza recipe that was originally posted to cookieandkate.com.
+          This is the worlds best meat lasagna recipe.
          </h5>
         </p>
       <aside> 
@@ -27,72 +27,142 @@
           Ingredients:
         </p>
         <p>
-          1 whole wheat tortilla (or whole wheat pita bread)
+          1 pound of sweet italian sausage
         </p>
         <p>
-          1/4 cup sauce (marinara, pesto, olive oil and garlic, barbecue sauce)
+          3/4 pound of lean ground beef
         </p>
         <p>
-          1/3 cup or less shredded/crumbled cheese (mozzarella, cheddar, goat, feta)
+          1/2 cup minced onions
         </p>
         <p>
-          Toppings (go wild!)
+          2 cloves garlic, crushed
+        </p>
+        <p>
+          1 (28 ounce) can crushed tomatoes
+        </p>
+        <p>
+          2 (6 ounce) cans tomato paste
+        </p>
+        <p>
+          2 (6.5 ounce) cans canned tomato sauce
+        </p>
+        <p>
+          ½ cup water
+        </p>
+        <p>
+          2 tablespoons white sugar
+        </p>
+        <p>
+          1 ½ teaspoons dried basil leaves
+        </p>
+        <p>
+          ½ teaspoon fennel seeds
+        </p>
+        <p>
+          1 teaspoon Italian seasoning
+        </p>
+        <p>
+          1 ½ teaspoons salt, divided, or to taste
+        </p>
+        <p>
+          ¼ teaspoon ground black pepper
+        </p>
+        <p>
+          4 tablespoons chopped fresh parsley
+        </p>
+        <p>
+          12 lasagna noodles
+        </p>
+        <p>
+          16 ounces ricotta cheese
+        </p>
+        <p>
+          1 egg
+        </p>
+        <p>
+          ¾ pound mozzarella cheese, sliced
+        </p>
+        <p>
+          ¾ cup grated Parmesan cheese
         </p>
       </aside>
         <p>
           Instructions
         </p>
-        <article id="mini">
       <ol>
-        <li>Preheat the oven to 425 degrees Fahrenheit.
+        <li>
+          Cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water.
         </li>
         <li>
-          Place the tortilla in a 12-inch cast iron pan (see notes on baking surfaces below). Spread sauce evenly across the tortilla, leaving 1/2 inch around the edges. Sprinkle with cheese and toppings.
+          Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.
         </li>
         <li>
-          Bake for 12-14 minutes, until the cheese is golden and bubbling (no sooner!) and the edges of the tortilla are lightly browned. Slice and serve.
+          Preheat the oven to 375 degrees Fahrenheit.
+        </li>
+        <li>
+          Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.
+        </li>
+        <li>
+          In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.
+        </li>
+        <li>
+          To assemble, spread 1 1/2 cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce. Spread with one half of the ricotta cheese mixture. Top with a third of mozzarella cheese slices. Spoon 1 1/2 cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese. Repeat layers, and top with remaining mozzarella and Parmesan cheese.
+        </li>
+        <li>
+          Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.
         </li>
        </ol>
-        </article>
     </article>
     <article id="container2">
       <p>
-        Notes
+      <h3>Notes</h3>
       </p>
       <p>
-        If you don’t have a cast iron skillet I highly recommend getting one, but you can use an oven-safe baking rack or bake it directly on the rack of your toaster oven instead. Bake at 400 degrees for 8 to 11 minutes. Do not use a regular baking sheet because the bottom of the tortilla will not get crispy, your cheese will slide right off and you’ll wish you ordered out.
-      </p>
-      
+        <b>Prep:</b> 30 minutes
+      </p> 
       <p>
-        Although I have not tried it personally, Kim tried making tortilla pizzas in her cast iron skillet on a gas grill and said they turned out great!
+        <b>Cook:</b> 2 hours 30 minutes
       </p>
       <p>
-        Make sure to check the ingredients list on the whole wheat tortillas. It should list about 5 ingredients, not 25. I buy mine at health food stores and store them in the fridge or freezer and they almost never go bad.
+        <b>Additional:</b> 15 minutes
       </p>
+      <p>
+        <b>Total:</b> 3 hours 15 minutes
+      </p>
+      <p>
+      <p>
+        <b>Yeald:</b> 12 servings
+      </p>
+      <aside2>
+        <p>
+          This is what it should look like
+        </p>
     </article>
     <article id="container3">
       <p>
-        Topping ideas:
+        Nutrition Facts Per Serving:
       </p>
       <ul>
         <li>
-        As shown: barbecue sauce (trust me), fresh mozzarella and sharp cheddar cheese, chopped red onion, sliced fresh jalapeño, fresh or defrosted frozen pineapple (canned pineapple is not as good).
-        </li>
-        <li>Basil pesto, feta, fresh or roasted bell peppers (jarred is fine), sliced kalamata olives, chopped red onion, sliced cherry tomatoes.
+        448 calories
         </li>
         <li>
-        Arugula pesto, basil pesto or light marinara sauce, mozzarella (optional), fresh arugula and parmesan shavings added after baking (like this).
+          protein 29.7g
         </li>
         <li>
-        Red pepper pesto and goat cheese.
+          carbohydrates 36.5g
         </li>
-      <p>
-        Anything you want!
-      </p>
+        <li>
+          fat 21.3g
+        </li>
+        <li>
+          sodium 1400.4mg
+        </li>
     </article>
     </section>
     <footer>
-      Photo and recipe courtesy of cookieandkate.com
+      Designed by Hunter Farrar and recipe by John Chandler
     </footer>
   </body>
 </html>
