--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -138,6 +138,7 @@
         <p>
           This is what it should look like
         </p>
+      </aside2>
     </article>
     <article id="container3">
       <p>
