--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -134,11 +134,11 @@
       <p>
         <b>Yeald:</b> 12 servings
       </p>
-      <aside2>
+      <Aside>
         <p>
           This is what it should look like
         </p>
-      </aside2>
+      </Aside>
     </article>
     <article id="container3">
       <p>
