--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -90,6 +90,7 @@
         <p>
           Instructions
         </p>
+        <mini>
       <ol>
         <li>
           Cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water.
@@ -113,6 +114,7 @@
           Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.
         </li>
        </ol>
+       </mini>
     </article>
     <article id="container2">
       <p>
