--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -136,11 +136,11 @@
       <p>
         <b>Yeald:</b> 12 servings
       </p>
-      <Aside>
+      <article id="mini2">
         <p>
           This is what it should look like
         </p>
-      </Aside>
+      </article>
     </article>
     <article id="container3">
       <p>
