--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -117,6 +117,11 @@
        </mini>
     </article>
     <article id="container2">
+      <article id="mini2">
+        <p>
+          This is what it should look like
+        </p>
+      </article>
       <p>
       <h3>Notes</h3>
       </p>
