--- a/Week04/recipe.html
+++ b/Week04/recipe.html
@@ -90,7 +90,7 @@
         <p>
           Instructions
         </p>
-        <mini>
+        <article id="mini">
       <ol>
         <li>
           Cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water.
@@ -114,7 +114,7 @@
           Bake in preheated oven for 25 minutes. Remove foil, and bake an additional 25 minutes. Cool for 15 minutes before serving.
         </li>
        </ol>
-       </mini>
+        </article>
     </article>
     <article id="container2">
       <article id="mini2">
@@ -141,12 +141,6 @@
       <p>
         <b>Yeald:</b> 12 servings
       </p>
-      <article id="mini2">
-        <p>
-          This is what it should look like
-        </p>
-      </article>
-    </article>
     <article id="container3">
       <p>
         Nutrition Facts Per Serving:
