--- a/Week05/javascript.html
+++ b/Week05/javascript.html
@@ -5,7 +5,8 @@
         <title>Web Design 2: Hunter farrar javascript page</title>
         <script>
             function showAlert() {
-                alert ("Hello world!");
+                var myText = "This is my op world";
+                alert (myText);
             }
         </script>
     </head>
