--- a/Week05/javascript.html
+++ b/Week05/javascript.html
@@ -10,7 +10,9 @@
             }
         </script>
     </head>
-    <body onload="showAlert()">
+    <body>
+
+        <button onclick="showAlert()">Show alert</button>
 
     </body>
 </html>
