--- a/Week05/StockVaribles.html
+++ b/Week05/StockVaribles.html
@@ -4,13 +4,11 @@
         <meta =charset="utf-8">
         <title>Web Design 2: Hunter farrar javascript page</title>
         <script>
-            function {
                 var Raython = 24.95;
-                var General Mills = 5.50;
-                var AT&T = 17.67;
+                var generalMills = 5.50;
+                var ATnT = 17.67;
                 var Ford = 5.75;
                 var Marathon = 7.87;
-            }
         </script>
 
     </head>
@@ -18,6 +16,10 @@
         <h1>Stock prices</h1>
         <script>
             document.write("Raython: " + Raython + "<br>");
+            document.write("General Mills: " + generalMills + "<br>");
+            document.write("AT&T: " + ATnT + "<br>");
+            document.write("Ford: " + Ford + "<br>");
+            document.write("Marathon: " + Marathon + "<br>");
         </script>
     </body>
 </html>
