--- a/Week05/events.html
+++ b/Week05/events.html
@@ -18,7 +18,7 @@
 
         <button onclick="myFunction()">Click me!</button>
 
-        <p id="text"></p>
+        <p id="demo"></p>
 
         <script>
             function myFunction() {
