--- a/Week08/index.html
+++ b/Week08/index.html
@@ -14,7 +14,11 @@
 
     <p>Visit our downtown campus! Here is a map to follow:</p>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.470083934208!2d-96.80739768548173!3d32.7797927911525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e9917b1696c0d%3A0xf8c36989536f679c!2sEl%20Centro%20College%20Downtown%20Campus%2C%20801%20Main%2C%20Dallas%2C%20TX%2075202!5e0!3m2!1sen!2sus!4v1646782978994!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3354.470083934208!2d-96.80739768548173!3d32.7797927911525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e9917b1696c0d%3A0xf8c36989536f679c!2sEl%20Centro%20College%20Downtown%20Campus%2C%20801%20Main%2C%20Dallas%2C%20TX%2075202!5e0!3m2!1sen!2sus!4v1646782978994!5m2!1sen!2sus" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  
+  <p>Listen so come cool music on the drive<p>
+  
+  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX1ewVhAJ17m4?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
 </body>
 </html>
