--- a/Week08/API-project.html
+++ b/Week08/API-project.html
@@ -83,10 +83,7 @@
                     </ol>
                 <aside>
                   <p>My favorite anime music</p>
-                    <ol>
-                        <li>music</li>
-                        <li>music</li>
-                    </ol>
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2wsfmnmDqjozs6MMjH1zbq?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </aside>
             </article>
         </section>
