--- a/Week08/Final-project/API-project.html
+++ b/Week08/Final-project/API-project.html
@@ -13,23 +13,22 @@
                 <nav>
                     <ol>
                         <h3>Need to watch or finish animes</h3>
-                        <div id="watch1"></div>
-                            <li><span id="A">One piece</span><span id="a">Have not started</span></li>
-                            <li><span id="B">Arifureta: From common Place to World's Strongest</span><span id="b">Season 2: Episode 7</span></li>
-                            <li><span id="C">Boruto</span><span id="c">Season 1: Episode 66</span></li>
-                            <li><span id="D">Mobile Suit Gundam 00</span><span id="d">Have not started</span></li>
-                            <li><span id="E">Demon Lord Retry</span><span id="e">Have not started</span></li>
-                            <li><span id="F">Cautious Hero</span><span id="f">Have not started</span></li>
-                            <li><span id="G">Fruits Basket</span><span id="g">Have not started</span></li>
-                            <li><span id="H">Devil's Line</span><span id="h">Have not started</span></li>
-                            <li><span id="I">Psycho-Pass</span><span id="i">Have not started</span></li>
-                            <li><span id="J">Wise Man's Grandchild</span><span id="j">Have not started</span></li>
-                            <li><span id="K">Prince of Stride: Alternative</span><span id="k">Have not started</span></li>
-                            <li><span id="L">By the Grace of the Gods</span><span id="l">Have not started</span></li>
-                            <li><span id="M">Bleach</span><span id="m">Have not started</span></li>
-                            <li><span id="N">Death Parade</span><span id="n">Have not started</span></li>
-                            <li><span id="O">Plundrer</span><span id="o">Have not started</span></li>
-                            <li><span id="P">Dance with the Devils</span><span id="p">Have not started</span></li>
+                            <li><div id="watch1"><span id="A">One piece</span><span id="a">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="B">Arifureta: From common Place to World's Strongest</span><span id="b">Season 2: Episode 7</span></div></li>
+                            <li><div id="watch1"><span id="C">Boruto</span><span id="c">Season 1: Episode 66</span></div></li>
+                            <li><div id="watch1"><span id="D">Mobile Suit Gundam 00</span><span id="d">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="E">Demon Lord Retry</span><span id="e">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="F">Cautious Hero</span><span id="f">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="G">Fruits Basket</span><span id="g">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="H">Devil's Line</span><span id="h">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="I">Psycho-Pass</span><span id="i">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="J">Wise Man's Grandchild</span><span id="j">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="K">Prince of Stride: Alternative</span><span id="k">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="L">By the Grace of the Gods</span><span id="l">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="M">Bleach</span><span id="m">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="N">Death Parade</span><span id="n">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="O">Plundrer</span><span id="o">Have not started</span></div></li>
+                            <li><div id="watch1"><span id="P">Dance with the Devils</span><span id="p">Have not started</span></div></li>
                         <p>Rewatch</p>
                             <li>Snow White</li>
                             <li>Say "I love you"</li>
