--- a/Week08/Final-project/API-project.html
+++ b/Week08/Final-project/API-project.html
@@ -10,81 +10,80 @@
         </header>
         <section>
             <article>
-                <nav>
+              <nav>
                     <ol>
                         <h3>Need to watch or finish animes</h3>
-                            <li><div id="watch1"><span id="A">One piece</span><span id="a">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="B">Arifureta: From common Place to World's Strongest</span><span id="b">Season 2: Episode 7</span></div></li>
-                            <li><div id="watch1"><span id="C">Boruto</span><span id="c">Season 1: Episode 66</span></div></li>
-                            <li><div id="watch1"><span id="D">Mobile Suit Gundam 00</span><span id="d">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="E">Demon Lord Retry</span><span id="e">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="F">Cautious Hero</span><span id="f">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="G">Fruits Basket</span><span id="g">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="H">Devil's Line</span><span id="h">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="I">Psycho-Pass</span><span id="i">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="J">Wise Man's Grandchild</span><span id="j">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="K">Prince of Stride: Alternative</span><span id="k">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="L">By the Grace of the Gods</span><span id="l">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="M">Bleach</span><span id="m">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="N">Death Parade</span><span id="n">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="O">Plundrer</span><span id="o">Have not started</span></div></li>
-                            <li><div id="watch1"><span id="P">Dance with the Devils</span><span id="p">Have not started</span></div></li>
+                        <li>One Piece</li>
+                        <li>Arifureta: From common Place to World's Strongest</li>
+                        <li>Boruto</li>
+                        <li>Mobile Suit Gundam 00</li>
+                        <li>Demon Lord Retry</li>
+                        <li>Cautious Hero</li>
+                        <li>Fruits Basket</li>
+                        <li>Devil's Line</li>
+                        <li>Psycho-Pass</li>
+                        <li>Wise Man's Grandchild</li>
+                        <li>Prince of Stride: Alternative</li>
+                        <li>By the Grace of the Gods</li>
+                        <li>Bleach</li>
+                        <li>Death Parade</li>
+                        <li>Plundrer</li>
+                        <li>Dance with the Devils</li>
                         <p>Rewatch</p>
-                            <li>Snow White</li>
-                            <li>Say "I love you"</li>
-                            <li>Guilty Crown</li>
-                            <li>Shakugan no Shana</li>
-                            <li>Soul Eater</li>
-                        </div>
+                        <li>Snow White</li>
+                        <li>Say "I love you"</li>
+                        <li>Guilty Crown</li>
+                        <li>Shakugan no Shana</li>
+                        <li>Soul Eater</li>
                     </ol>
                 </nav>
                     <p><h3>Have watched</h3></p>
-                        <ol>
-                            <li>Hitman Reborn</li>
-                            <li>Fairy Tail</li>
-                            <li>Sword Art online</li>
-                            <li>Charlotte</li>
-                            <li>Monster Musume</li>
-                            <li>Shimoneta</li>
-                            <li>Snow White</li>
-                            <li>Tokyo Ghouls</li>
-                            <li>Maid-sama</li>
-                            <li>Noragami</li>
-                            <li>Blue Exorcist</li>
-                            <li>Love is war</li>
-                            <li>Food wars</li>
-                            <li>Oreshura</li>
-                            <li>Naruto</li>
-                            <li>Assassination Classroom</li>
-                            <li>Code Geass</li>
-                            <li>Maken-ki</li>
-                            <li>Attack on Titan</li>
-                            <li>Diabolik Lovers</li>
-                            <li>Darling in the Franxx</li>
-                            <li>Sekirei</li>
-                            <li>Devil is a Part-timer!</li>
-                            <li>Date A Live</li>
-                            <li>Chivalry of a failed knight</li>
-                            <li>The Future Diary</li>
-                            <li>The Askerisk War</li>
-                            <li>Akame ga kill</li>
-                            <li>Your Lie in April</li>
-                            <li>No Game No Life</li>
-                            <li>Death Note</li>
-                            <li>Tokyo Ravens</li>
-                            <li>Blood Lad</li>
-                            <li>High School of the Dead</li>
-                            <li>K</li>
-                            <li>Demon Slayer</li>
-                            <li>Rascal Does Not Dream of Bunny Girl Senpai</li>
-                            <li>Infinite Stratos</li>
-                            <li>Undefeted Bahamut Chronicles</li>
-                            <li>Aesthetica of a Rough hero</li>
-                            <li>Rosario + Vampire</li>
-                        </ol>
+                    <ol>
+                        <li>Hitman Reborn</li>
+                        <li>Fairy Tail</li>
+                        <li>Sword Art online</li>
+                        <li>Charlotte</li>
+                        <li>Monster Musume</li>
+                        <li>Shimoneta</li>
+                        <li>Snow White</li>
+                        <li>Tokyo Ghouls</li>
+                        <li>Maid-sama</li>
+                        <li>Noragami</li>
+                        <li>Blue Exorcist</li>
+                        <li>Love is war</li>
+                        <li>Food wars</li>
+                        <li>Oreshura</li>
+                        <li>Naruto</li>
+                        <li>Assassination Classroom</li>
+                        <li>Code Geass</li>
+                        <li>Maken-ki</li>
+                        <li>Attack on Titan</li>
+                        <li>Diabolik Lovers</li>
+                        <li>Darling in the Franxx</li>
+                        <li>Sekirei</li>
+                        <li>Devil is a Part-timer!</li>
+                        <li>Date A Live</li>
+                        <li>Chivalry of a failed knight</li>
+                        <li>The Future Diary</li>
+                        <li>The Askerisk War</li>
+                        <li>Akame ga kill</li>
+                        <li>Your Lie in April</li>
+                        <li>No Game No Life</li>
+                        <li>Death Note</li>
+                        <li>Tokyo Ravens</li>
+                        <li>Blood Lad</li>
+                        <li>High School of the Dead</li>
+                        <li>K</li>
+                        <li>Demon Slayer</li>
+                        <li>Rascal Does Not Dream of Bunny Girl Senpai</li>
+                        <li>Infinite Stratos</li>
+                        <li>Undefeted Bahamut Chronicles</li>
+                        <li>Aesthetica of a Rough hero</li>
+                        <li>Rosario + Vampire</li>
+                    </ol>
                 <aside>
                   <p>My favorite anime music</p>
-                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2wsfmnmDqjozs6MMjH1zbq?utm_source=generator" width="100%" height="250" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/2wsfmnmDqjozs6MMjH1zbq?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
                 </aside>
             </article>
         </section>
